# webTRDP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/: config_paths.hpp  json_utils.h
backend/include/controllers/: TrdpController.h
backend/src/: config_paths.cpp  json_utils.cpp  main.cpp
backend/src/controllers/: TrdpController.cc
cmake/: README.md  webtrdp.default  webtrdp.service.in
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  app.css
scripts/: run-backend.sh  run-frontend.sh  trdp-simulator.service
scripts/deb/: postinst  postrm  prerm
src/: trdp_api_reference.c
trdp-core/: CMakeLists.txt
trdp-core/include/: trdp_config.hpp  trdp_engine.hpp
trdp-core/include/trdp/: core.hpp  trdp_config_loader.hpp
trdp-core/src/: core.cpp  trdp_config_loader.cpp  trdp_engine.cpp
trdp-core/tests/: trdp_config_dump.cpp
